@@ -3,6 +3,6 @@ RAYLIB_TEXT_PATH = "../raylib_dll/raylib/examples/text/"
 RAYLIB_TEXTURE_PATH = "../raylib_dll/raylib/examples/textures/"
 RAYLIB_AUDIO_PATH = "../raylib_dll/raylib/examples/audio/"
 RAYLIB_OTHERS_PATH = "../raylib_dll/raylib/examples/others/"
-RAYLIB_SHADERS_PATH = "../raylib_dll/raylib/examples/shaders/"
+RAYLIB_SHADERS_PATH = "../raylib_dll/raylib/examples/shaders/resources/"
 
 RAYGUI_STYLE_PATH = "../raygui_dll/raygui/styles/"
